--- a/execute_rest_extractor/function_config_test.yaml
+++ b/execute_rest_extractor/function_config_test.yaml
@@ -5,7 +5,7 @@ owner: CDF Bootcamp Team
 cpu: 1.0
 memory: 1.5
 env_vars: {"COGNITE_BASE_URL": "https://westeurope-1.cognitedata.com",
-  "COGNITE_PROJECT": "cdf-bootcamp-<n>-test",
-  "COGNITE_TOKEN_URL": "https://login.microsoftonline.com/16e3985b-ebe8-4e24-9da4-933e21a9fc81/oauth2/v2.0/token",
+  "COGNITE_PROJECT": "slb-test",
+  "COGNITE_TOKEN_URL": "https://login.microsoftonline.com/45472a8e-6a12-4531-97d8-1f38f5d553a4/oauth2/v2.0/token",
   }
-data_set_id: <DATA SET ID FOR execute_rest_extractor in TEST environment>
+data_set_id: 3010655221386586
