--- a/common/function_config_test.yaml
+++ b/common/function_config_test.yaml
@@ -1,5 +1,5 @@
 # Configuration file for dev environment. Will apply to all functions, but will be overwritten by
 # configurations files in specific function folder.
-tenant_id: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
+tenant_id: 45472a8e-6a12-4531-97d8-1f38f5d553a4
 cdf_cluster: westeurope-1
-cdf_project: cdf-bootcamp-<n>-test
+cdf_project: slb-test
