--- a/execute_rest_extractor/extractor_config.yaml
+++ b/execute_rest_extractor/extractor_config.yaml
@@ -14,7 +14,7 @@ cognite:
     scopes:
       - ${COGNITE_BASE_URL}/.default
   extraction_pipeline:
-    external-id: "ice-cream-api:opcua:datapoints"
+    external-id: "ice-cream-api:DnI_BRZ:datapoints"
 
 api:
   url: https://ice-cream-factory.inso-internal.cognite.ai
@@ -36,8 +36,8 @@ extractor:
   parallelism: 4
   state_store:
     raw:
-      database: src:002:opcua:db:state
-      table: timeseries_datapoints_states
+      database: DnI_BRZ
+      table: datapoints:state
 
 backfill:
   enabled: False
@@ -49,4 +49,4 @@ frontfill:
   lookback-min: 60
 
 
-oee_timeseries_dataset_ext_id: src:002:opcua:ds
+oee_timeseries_dataset_ext_id: DnI_BRZ_IM
